--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			        </div>
                 </div>
                 <div id="clock-box">
-                    蠢猪<span class="STYLE1">与</span>宝贝<span class="STYLE1">已经相识了</span>
+                    我<span class="STYLE1">与</span>宝贝<span class="STYLE1">已经相识了</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="640"></canvas>
