--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <!--这里放音乐哦 -->
 		<audio autoplay="autopaly">
-			<source src="./iloveu.m4a" audio="" mp3"="">
+			<source src="./iloveu.m4a" audio="" mp3="">
 		</audio>
 
         <div id="main">
@@ -27,21 +27,17 @@
             <div id="wrap">
                 <div id="text">
 			        <div id="code">
-                        <span class="say"> 宝贝，还记得我们是怎么相识的吗, 或许是缘分，或许是注定的。</span><br>
+                        <span class="say"> 一见钟情，共度一生！</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 第一次的见面与接触，就产生了好感。对自己没抓到娃娃有些许沮丧。</span><br>
+                        <span class="say"> 相识相恋相爱，我们即将共同度过200天幸福生活。</span><br>
+                        <span class="say"> </span><br>
+                        <span class="say"> 近200天的热恋，我们互相分享喜悦，共同承担压力。我们已是双方生活中不可或缺的元素。</span><br>
+                        <span class="say"> 两个人的生活，已经变成了一对恋人的生活，不可分割。</span><br>
+                        <span class="say"> </span><br>
+                        <span class="say"> 有人说幸福是建立在物质基础上的，也有人说精神上的满足才是真正的幸福。我想说只要有宝贝在就是幸福的！</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 每天的交流与周末的约会，我发现喜欢上宝贝了，脑海经常浮现宝贝的身影，</span><br>
-			        	<span class="say"> 南浔是我们出去游玩的第一站，宝贝靠着我睡觉的时候，超幸福。</span><br>
-						<span class="say"> </span><br>
-			        	<span class="say"> 一段时的相处，我爱上了宝贝。</span><br>
-			        	<span class="say"> 脑海中都是宝贝，想要时刻掌握宝贝的动向。</span><br>
-			        	<span class="say"> 你说你很粘人，其实我比你更粘人。我想要了解宝贝的一切。</span><br>
-						<span class="say"> </span><br>
-			        	<span class="say"> 我很笨，经常惹宝贝气。但我保证，会宠宝贝一辈子。</span><br>
-			        	<span class="say"> 让我们彼此依赖，彼此关心，彼此温暖。</span><br>
-			        	<span class="say"> 宝贝，做我女朋友吧！一辈子的那种。</span><br>
-			        	<span class="say"> 我们已经错过了二十多年，剩下的时光让我们携手共度吧。</span><br>
+                        <span class="say"> 余生请不要客气，我们坦诚相见，携手共度！</span><br>
+			        	<span class="say"> 宝贝我爱你一辈子！</span><br>
 			        </div>
                 </div>
                 <div id="clock-box">
