--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
 			        <div id="code">
                         <span class="say"> 一见钟情，共度一生！</span><br>
 						<span class="say"> </span><br>
-                        <span class="say"> 相识相恋相爱，我们即将共同度过200天幸福生活。</span><br>
+                        <span class="say"> 从2019年到2020年，我们大手拉小手迈入了21世纪20年代。</span><br>
                         <span class="say"> </span><br>
-                        <span class="say"> 近200天的热恋，我们互相分享喜悦，共同承担压力。我们已是双方生活中不可或缺的元素。</span><br>
-                        <span class="say"> 两个人的生活，已经变成了一对恋人的生活，不可分割。</span><br>
+                        <span class="say"> 受疫情影响，全民隔离，心情枯燥。</span><br>
+                        <span class="say"> 而我有了更多时间陪着宝贝，一起度过数个白天黑夜。</span><br>
+                        <span class="say"> 俗话说患难见真情，我们也算一起患过难了。</span><br>
                         <span class="say"> </span><br>
-                        <span class="say"> 有人说幸福是建立在物质基础上的，也有人说精神上的满足才是真正的幸福。我想说只要有宝贝在就是幸福的！</span><br>
+                        <span class="say"> 这几天我品尝了宝贝亲手为我准备的爱心美食。</span><br>
+                        <span class="say"> 我想发自内心地呐喊，真的太好吃了！</span><br>
+                        <span class="say"> 即将迎来我们的第一个情人节，我想做爱心美食给宝贝吃！</span><br>
 						<span class="say"> </span><br>
                         <span class="say"> 余生请不要客气，我们坦诚相见，携手共度！</span><br>
 			        	<span class="say"> 宝贝我爱你一辈子！</span><br>
