--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <span class="say"> </span><br>
                         <span class="say"> 受疫情影响，全民隔离，心情枯燥。</span><br>
                         <span class="say"> 而我有了更多时间陪着宝贝，一起度过数个白天黑夜。</span><br>
+                        <span class="say"> 谢谢大家对我的照顾，感谢！</span><br>
                         <span class="say"> 俗话说患难见真情，我们也算一起患过难了。</span><br>
                         <span class="say"> </span><br>
                         <span class="say"> 这几天我品尝了宝贝亲手为我准备的爱心美食。</span><br>
